--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Kviz</title>
 	<link rel="stylesheet" type="text/css" href="style2.css">
 </head>
-<body>
+<body oncontextmenu="return false;">
 
 <div class="meni">
 	<div class="nav">
