--- a/index3.html
+++ b/index3.html
@@ -4,7 +4,7 @@
 	<title>Biologija</title>
 	<link rel="stylesheet" type="text/css" href="style3.css">
 </head>
-<body>	
+ <body oncontextmenu="return false;">	
 
 		<label id="ban"> Bodovi: </label>
 		<a id="bod"></a>
