--- a/index4.html
+++ b/index4.html
@@ -4,7 +4,7 @@
 	<title>Opste znanje</title>
 	<link rel="stylesheet" type="text/css" href="style4.css">
 </head>
-<body>	
+ <body oncontextmenu="return false;">
 
 		<label id="ban"> Bodovi: </label>
 		<a id="bod"></a>
