--- a/index5.html
+++ b/index5.html
@@ -4,7 +4,7 @@
 	<title>Istorija</title>
 	<link rel="stylesheet" type="text/css" href="style5.css">
 </head>
-<body>	
+ <body oncontextmenu="return false;">
 
 		<label id="ban"> Bodovi: </label>
 		<a id="bod"></a>
